--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.initialization-mode=always
 spring.datasource.data=data.sql
