--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,6 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.initialization-mode=always
 spring.datasource.data=data.sql
+spring.jpa.show-sql=true
